# layout-rag

./: .coverage  .env  .env copy  .gitignore  CLAUDE.md  README.html  README.md  app.py  build_electron.bat  build_vector_store.py  config.py  debug_project.json  debug_tpl.json  implementation_plan.md  pyproject.toml  requirements.txt  scheme.json  test_layout_optimizer.py  test_retrieval.py
.claude/: settings.local.json
api/: endpoints.py
core/: feature_extractor.py  layout_optimizer.py
data/: part_name.txt
docs/: 1_需求背景与痛点分析.html  1_需求背景与痛点分析.md  2_功能需求清单.md  3_用户交互流程图.html  3_用户交互流程图.md  4_系统架构图.md  5_关键技术选型.html  5_关键技术选型.md  5_领域模型与业务扩展说明.md  6_布局配置字段定义.html  6_布局配置字段定义.md  database_schema.html  database_schema.md  neo4j_schema_report.md  产品侧项目流程说明.html  产品侧项目流程说明.md  介绍.html  布局智能体改进点.html  布局智能体改进点.md  框选交付物文档.md
electron-app/: main.js  package-lock.json  package.json  preload.js  testdata.json
output/: vector_store.json  vector_store.json.npz
scratch/: verify_features.py
scripts/: add_layout_names.py  build_vector_store.py
services/: layout_service.py
static/: app.js  configurator.html  configurator.js  configurator_options.json  download_fonts.py  fonts.css  index.html  layout_workbench.css  layout_workbench.html  layout_workbench.js  loading.html  part.color  standard_names.txt  tailwind.js
templates/: BoxEnums.cs  中船国际数科城项目系统图.json  中船国际数科城项目系统图_grouped.json  中船国际数科城项目系统图_result.json
tests/: conftest.py  test_cabinet_layout_optimizer.py  test_domain.py  test_launch_app.py  test_layout_optimizer.py  test_layout_service.py  (+3 more)
(+2765 files in other folders)
