[project]
name = "layout-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "numpy>=2.4.3",
    "ortools>=9.15.6755",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"