[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layout-rag"
version = "0.1.0"
description = "基于历史模板检索与约束求解的电气柜元件布局推荐系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.15",
    "fastapi>=0.135.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.24",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "neo4j>=6.1.0",
    "numpy>=2.4.3",
    "ortools>=9.15.6755",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
